--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "json2csv": "^5.0.7",
+    "mathjs": "^13.2.0",
+    "os": "^0.1.2",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://ec2-54-253-1-177.ap-southeast-2.compute.amazonaws.com"
+  }
 }
